<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rlTop" style="@style/TopLayout">
        <ImageView android:id="@id/ivBack" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/return_icon" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="22.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_manage" android:layout_centerInParent="true" />
        <ImageView android:id="@id/ivTick" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/confirm_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="#ffefefef" android:paddingLeft="20.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="150.0dip">
        <TextView android:textColor="#ff969696" android:id="@id/tvDate" android:text="@string/device_manage_text1" style="@style/TextViewGray" />
        <TextView android:textColor="#ff969696" android:id="@id/tvPlace" android:layout_marginTop="8.0dip" android:text="@string/device_manage_text2" style="@style/TextViewGray" />
        <TextView android:textColor="#ff969696" android:id="@id/tvDeviceType" android:layout_marginTop="8.0dip" android:text="@string/device_manage_text3" style="@style/TextViewGray" />
        <TextView android:textColor="#ff969696" android:id="@id/tvDeviceCode" android:layout_marginTop="8.0dip" android:text="@string/device_manage_text4" style="@style/TextViewGray" />
    </LinearLayout>
    <TextView android:textSize="16.0dip" android:textColor="#ff9a9a9a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="12.0dip" android:text="@string/name" />
    <EditText android:textColor="@color/background_blue" android:id="@id/etName" android:layout_marginLeft="30.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="30.0dip" android:hint="@string/device_name" style="@style/EditTextTheme" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:id="@id/btnDelDevice" android:layout_marginBottom="18.0dip" android:text="@string/delete_airpurifier" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/ButtonBlue" />
    </RelativeLayout>
</LinearLayout>