<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:fitsSystemWindows="true" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rlTop" style="@style/TopLayout">
        <ImageView android:id="@id/ivBack" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/return_icon" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/ivStep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forget_password" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/llInputMenu" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/rlTop">
        <Button android:textColor="@color/text_gray" android:gravity="left|center" android:id="@id/btnPhoneReset" android:background="#ffffffff" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="65.0dip" android:text="@string/reset_by_phone" android:drawableRight="@drawable/arrow_right_gray" />
        <View android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Button android:textColor="@color/text_gray" android:gravity="left|center" android:id="@id/btnEmailReset" android:background="#ffffffff" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="65.0dip" android:text="@string/reset_by_email" android:drawableRight="@drawable/arrow_right_gray" />
        <View android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/llInputPhone" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/rlTop">
        <EditText android:id="@id/etName" android:paddingLeft="10.0dip" android:layout_marginTop="30.0dip" android:hint="@string/register_phone_num" style="@style/EditTextTheme" />
        <Button android:id="@id/btnGetCode" android:visibility="gone" android:text="@string/forget_password_get_verifycode" style="@style/ButtonBlue" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/llInputCode" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/etInputCode" android:paddingLeft="10.0dip" android:hint="@string/forget_password_verifycode" android:layout_weight="1.0" style="@style/EditTextTheme" />
            <Button android:textSize="14.0sp" android:textColor="@android:color/background_light" android:id="@id/btnReGetCode" android:background="@drawable/button_blue_short" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forget_password_get_verifycode2" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/llInputPsw" android:background="@drawable/login_input_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <EditText android:id="@id/etInputPsw" android:background="@android:color/transparent" android:hint="@string/setting_password" android:digits="@string/register_name_digits" android:layout_weight="1.0" android:inputType="textPassword" style="@style/EditTextTheme" />
            <ToggleButton android:id="@id/tbPswFlag" android:background="@drawable/toggle_selector" android:layout_width="50.0dip" android:layout_height="24.0dip" android:textOn="" android:textOff="" />
        </LinearLayout>
        <Button android:id="@id/btnSure" android:text="@string/confirm" style="@style/ButtonBlue" />
    </LinearLayout>
    <RelativeLayout android:id="@id/rlInputEmail" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/rlTop">
        <Button android:id="@id/btnSureEmail" android:layout_marginTop="30.0dip" android:text="@string/confirm" android:layout_centerInParent="true" style="@style/ButtonBlue" />
        <EditText android:id="@id/etInputEmail" android:background="@drawable/login_input_box" android:paddingLeft="10.0dip" android:layout_margin="10.0dip" android:hint="@string/register_email" android:layout_above="@id/btnSureEmail" android:inputType="text" style="@style/EditTextTheme" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rlDialog" android:background="@color/transparent_half" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/rlTop">
        <TextView android:id="@id/tvDialog" android:background="@color/white" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="已发送至您的邮箱，\n请登录邮箱查收！" android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>