<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rlTop" style="@style/TopLayout">
        <ImageView android:id="@id/ivBack" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/return_icon" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/ivStep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/step_connect" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llStartConfig" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="30.0dip" android:src="@drawable/airlink_button" />
        <TextView android:textSize="14.0sp" android:textColor="@color/text_blue" android:gravity="center" android:id="@id/tvTips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/airlink_tips_start" />
        <Button android:id="@id/btnConfig" android:text="@string/airlink_btn_start" style="@style/ButtonBlue" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llConfiging" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="@color/text_blue" android:gravity="center" android:id="@id/tvConfiging" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/airlink_please_wait" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip">
            <ProgressBar android:layout_width="30.0dip" android:layout_height="30.0dip" android:indeterminateDrawable="@drawable/image_progress" />
            <TextView android:textSize="50.0sp" android:textColor="@color/text_black" android:id="@id/tvTick" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llConfigFailed" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="14.0sp" android:textColor="@color/text_blue" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/airlink_tips_error1" />
        <TextView android:textSize="14.0sp" android:textColor="@color/text_black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/airlink_tips_error2" />
        <TextView android:textSize="14.0sp" android:textColor="@color/text_blue" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/airlink_tips_error3" />
        <Button android:id="@id/btnRetry" android:layout_marginTop="30.0dip" android:text="@string/airlink_btn_retry" style="@style/ButtonBlue" />
        <Button android:id="@id/btnSoftap" android:visibility="gone" android:layout_margin="10.0dip" android:text="@string/airlink_btn_softap" style="@style/ButtonBlue" />
    </LinearLayout>
</LinearLayout>