<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rlTop" style="@style/TopLayout">
        <ImageView android:id="@id/ivBack" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/return_icon" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/ivStep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/step_devicelist" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/llConnectAp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/text_black" android:gravity="left" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/softap_text1" />
            <TextView android:textSize="16.0sp" android:textColor="@color/text_black" android:gravity="left" android:id="@id/tvpsw" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/softap_password" />
        </LinearLayout>
        <TextView android:textSize="16.0sp" android:textColor="@color/text_black" android:gravity="left" android:padding="20.0dip" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/softap_text2" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_black" android:gravity="left" android:padding="20.0dip" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/softap_text3" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/softap_icon" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llInsertPsw" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="@color/text_blue" android:id="@id/tvSsid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/softap_text4" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/login_input_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="30.0dip">
            <EditText android:textSize="14.0sp" android:id="@id/etInputPsw" android:background="@android:color/transparent" android:hint="@string/softap_text5" android:layout_weight="1.0" android:inputType="textPassword" style="@style/EditTextTheme" />
            <ToggleButton android:id="@id/tbPswFlag" android:background="@drawable/toggle_selector" android:layout_width="50.0dip" android:layout_height="24.0dip" android:textOn="" android:textOff="" />
        </LinearLayout>
        <Button android:id="@id/btnNext" android:text="@string/softap_text6" style="@style/ButtonBlue" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/llConfiging" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="@color/text_blue" android:id="@id/tvConfiging" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/softap_text7" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip">
            <ProgressBar android:layout_width="30.0dip" android:layout_height="30.0dip" android:indeterminateDrawable="@drawable/image_progress" />
            <TextView android:textSize="50.0sp" android:textColor="@color/text_black" android:id="@id/tvTick" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llConfigSuccess" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:src="@drawable/success" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/softap_text8" />
        <Button android:id="@id/btnOK" android:layout_margin="20.0dip" android:text="@string/softap_text9" style="@style/ButtonBlue" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llConfigFailed" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:src="@drawable/failure" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/softap_text10" />
        <Button android:id="@id/btnRetry" android:layout_margin="20.0dip" android:text="@string/softap_text11" style="@style/ButtonBlue" />
    </LinearLayout>
</LinearLayout>