<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rlTop" style="@style/TopLayout">
        <ImageView android:id="@id/ivBack" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/return_icon" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="22.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forget_password" android:layout_centerInParent="true" />
    </RelativeLayout>
    <EditText android:id="@id/etNum" android:layout_marginTop="60.0dip" android:hint="@string/forget_password_hint1" style="@style/EditTextTheme" />
    <Button android:id="@id/btnGetCode" android:text="@string/forget_password_get_verifycode" style="@style/ButtonBlue" />
</LinearLayout>