<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/fault_tips_box" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/text_black" android:gravity="center" android:id="@id/content" android:layout_width="300.0dip" android:layout_height="100.0dip" android:text="@string/dialog_logout_msg" android:layout_weight="1.0" />
    <LinearLayout android:layout_gravity="bottom" android:layout_width="300.0dip" android:layout_height="45.0dip">
        <Button android:textColor="@color/white" android:id="@id/left_btn" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_btn_back" android:layout_weight="1.0" />
        <Button android:textColor="@color/white" android:id="@id/right_btn" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_btn_logout" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>